--- a/app/src/main/res/layout/activity_company_request.xml
+++ b/app/src/main/res/layout/activity_company_request.xml
@@ -60,7 +60,8 @@
                 style="@style/iconsize"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/regularpayments"
+                android:background="@drawable/regularpayment"
+                android:backgroundTint="@color/Mint"
                 app:layout_constraintEnd_toStartOf="@+id/Salary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/line1" />
@@ -99,7 +100,8 @@
                 style="@style/iconsize"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:src="@drawable/recruitment"
+                android:backgroundTint="@color/Mint"
+                android:background="@drawable/recruitments"
                 app:layout_constraintStart_toEndOf="@id/txtsalary"
                 app:layout_constraintTop_toBottomOf="@+id/line1" />
 
@@ -136,7 +138,8 @@
             <ImageView
                 android:id="@+id/typejobic"
                 style="@style/iconsize"
-                android:src="@drawable/parttime"
+                android:background="@drawable/timework"
+                android:backgroundTint="@color/Mint"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/addressic" />
 
@@ -170,7 +173,8 @@
                 style="@style/iconsize"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_experience"
+                android:background="@drawable/ic_experience"
+                android:backgroundTint="@color/Mint"
                 app:layout_constraintStart_toEndOf="@id/txtLevel"
                 app:layout_constraintTop_toBottomOf="@+id/imgNumOfrecut" />
 
@@ -218,7 +222,8 @@
             <ImageView
                 android:id="@+id/levelic"
                 style="@style/iconsize"
-                android:src="@drawable/mlm"
+                android:background="@drawable/mlm"
+                android:backgroundTint="@color/Mint"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/typejobic" />
 
@@ -234,7 +239,8 @@
             <ImageView
                 android:id="@+id/icgender"
                 style="@style/iconsize"
-                android:src="@drawable/equality"
+                android:background="@drawable/equality"
+                android:backgroundTint="@color/Mint"
                 app:layout_constraintStart_toEndOf="@+id/txtTypejob"
                 app:layout_constraintTop_toBottomOf="@+id/typejobic" />
 
