--- a/app/src/main/res/drawable/bordered_edittext.xml
+++ b/app/src/main/res/drawable/bordered_edittext.xml
@@ -1,6 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/darkmode" />
+    <solid android:color="@color/darkmode"
+        />
     <stroke
         android:width="1dp"
         android:color="@color/Darkgray" />
@@ -9,4 +10,5 @@
         android:right="8dp"
         android:top="4dp"
         android:bottom="4dp" />
+    <corners android:radius="4dp" />
 </shape>
