--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -96,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:text="@string/job_management_options"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -108,7 +108,9 @@
             android:id="@+id/cardCurrentJobId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:cardCornerRadius="16dp"
             android:backgroundTint="@color/darkmodeCard"
             app:layout_constraintEnd_toStartOf="@+id/cardOldJobId"
@@ -175,7 +177,9 @@
             android:id="@+id/cardOldJobId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:cardCornerRadius="16dp"
             android:backgroundTint="@color/darkmodeCard"
             app:layout_constraintEnd_toEndOf="parent"
