--- a/app/src/main/res/layout/activity_companycolletion.xml
+++ b/app/src/main/res/layout/activity_companycolletion.xml
@@ -22,7 +22,7 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="370dp"
+            android:layout_height="350dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/img"
@@ -51,7 +51,7 @@
         <EditText
             android:id="@+id/txtcompanyName"
             android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="20dp"
             android:gravity="center_vertical"
             android:hint="@string/company_name"
@@ -63,10 +63,11 @@
 
         <ImageView
             android:id="@+id/personid"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/office"
+            android:backgroundTint="@color/Mint"
             app:layout_constraintEnd_toStartOf="@id/txtcompanyName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
