--- a/app/src/main/res/layout/item_notification_container.xml
+++ b/app/src/main/res/layout/item_notification_container.xml
@@ -32,16 +32,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/txtPosition"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:text="IT dev"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nofication_ic"
+        app:layout_constraintTop_toBottomOf="@+id/txtNotification" />
+
+    <TextView
         android:id="@+id/txtNotificationTime"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:text="5 Apr at 12:23"
-        android:textStyle="bold"
-        android:textSize="13sp"
         android:textColor="@color/Mint"
+        android:textSize="13sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/nofication_ic"
-        app:layout_constraintTop_toBottomOf="@+id/txtNotification" />
+        app:layout_constraintStart_toEndOf="@+id/nofication_ic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
