--- a/app/src/main/res/layout/activity_view_job_seeker_information.xml
+++ b/app/src/main/res/layout/activity_view_job_seeker_information.xml
@@ -5,7 +5,6 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
-    android:background="@color/black"
     tools:context=".activity.viewJobSeekerInformationActivity">
 
     <ScrollView
@@ -176,8 +175,11 @@
 
                 <TextView
                     android:id="@+id/webtxt"
-                    style="@style/textjob"
+                    android:layout_width="290dp"
+                    android:layout_height="wrap_content"
                     android:text="github.com/neko001"
+                    android:layout_margin="10dp"
+                    android:textSize="17sp"
                     app:layout_constraintBottom_toBottomOf="@+id/webic"
                     app:layout_constraintStart_toEndOf="@+id/webic"
                     app:layout_constraintTop_toTopOf="@+id/webic" />
@@ -289,7 +291,6 @@
                     android:layout_marginBottom="150dp"
                     android:text="Place Holder"
                     android:textColor="@color/darkmodedfont"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/benefit" />
@@ -339,8 +340,9 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    app:layout_constraintTop_toBottomOf="@+id/worktxt" />
+                    android:layout_height="150dp"
+                    app:layout_constraintTop_toBottomOf="@+id/worktxt"
+                    />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </ScrollView>
