--- a/app/src/main/res/layout/card_job_seeker.xml
+++ b/app/src/main/res/layout/card_job_seeker.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true"
-    android:background="@color/black"
     >
 
     <androidx.cardview.widget.CardView
@@ -166,8 +165,11 @@
 
             <TextView
                 android:id="@+id/webtxt"
-                style="@style/textjob"
+                android:layout_width="290dp"
+                android:layout_height="wrap_content"
                 android:text="github.com/neko001"
+                android:layout_margin="10dp"
+                android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="@+id/webic"
                 app:layout_constraintStart_toEndOf="@+id/webic"
                 app:layout_constraintTop_toTopOf="@+id/webic"
@@ -288,7 +290,6 @@
                 android:text="Place Holder"
                 android:visibility="gone"
                 android:textColor="@color/darkmodedfont"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/benefit"
@@ -317,6 +318,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/workexp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                app:layout_constraintTop_toBottomOf="@+id/worktxt" />
+
             <FrameLayout
                 android:id="@+id/left_overlay"
                 android:layout_width="0dp"
@@ -338,11 +344,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                app:layout_constraintTop_toBottomOf="@+id/worktxt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
