--- a/app/src/main/res/layout/item_job_container.xml
+++ b/app/src/main/res/layout/item_job_container.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="start"
+        android:layout_marginStart="5dp"
         android:text="Lap trinh vien cong nghe thong tin"
         android:textSize="16sp"
         android:textColor="@color/Mint"
@@ -50,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start"
+        android:layout_marginStart="5dp"
         android:text="Ho Chi Minh"
         android:textSize="16sp"
         android:textColor="@color/Mint"
@@ -73,6 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1 Apr 2022"
+        android:layout_marginStart="5dp"
         android:textColor="@color/Mint"
         android:textSize="13sp"
         android:textStyle="bold"
