--- a/app/src/main/res/layout/item_jobseeker_container.xml
+++ b/app/src/main/res/layout/item_jobseeker_container.xml
@@ -34,6 +34,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:gravity="start"
+        android:layout_marginStart="5dp"
         android:text="Nguyen Nhat Ho"
         android:textColor="@color/Mint"
         android:textSize="16sp"
@@ -57,6 +58,8 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:text="Nguyenho6478@gamail.com"
+        android:layout_marginStart="5dp"
+
         android:textColor="@color/Mint"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -80,6 +83,7 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:text="0965577189"
+        android:layout_marginStart="5dp"
         android:textColor="@color/Mint"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -99,6 +103,7 @@
         android:id="@+id/timeStart"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:text="1 Apr 2022"
         android:textColor="@color/Mint"
         android:textSize="13sp"
